@@ -17,7 +17,7 @@
             "rct2.scenery_small.tbr2",
             "$DAT:0C58B301|IRETBR2C",
             "rct2.scenery_small.tml",
-            "$DAT:00000001|1KRCLOGS",
+            "fidwell.scenery_small.tml",
             "rct2.scenery_small.tmw",
             "$DAT:0C58B401|IRECTMWC",
             "rct2.scenery_small.tbr3",
