@@ -18,6 +18,7 @@
 - Fixed object: Bush (rct2.scenery_small.tsh0)
 - Fixed object: Roman Column Wall (rct2.scenery_wall.wc3)
 - Fixed object: Egyptian Statue (rct2.scenery_small.tes1)
+- Fixed object: Logs (rct2.scenery_small.tml)
 - Fixed object: Barrel (fidwell.scenery_small.tbr3)
 - Fixed object: Barrel (fidwell.scenery_small.tbr4)
 - Fixed object: Sandstone Skyscraper Walkway (rct2tt.scenery_small.futsky01)
